<resources>
    <string name="app_name">YSAndroidAPI</string>

    <string name="system_info">system info</string>
    <string name="get_api_version">get api version</string>
    <string name="get_device_type">get device type</string>
    <string name="get_android_version">get android version</string>
    <string name="get_firmware_size">get hardware memory size</string>
    <string name="get_in_store_size">get internal storage size</string>
    <string name="get_firmware_sdk_version">get firmware sdk version</string>
    <string name="get_firmware_kernel_version">get firmware kernel version</string>
    <string name="get_device_firmware_version">get device firmware version</string>
    <string name="get_firmware_date">get firmware compile date</string>
    <string name="get_cpu_type">get device cpu type</string>

    <string name="shutdown_reboot">shutdown and reboot</string>
    <string name="shutdown">shutdown</string>
    <string name="reboot">reboot</string>

    <string name="display">display</string>
    <string name="nav_bar_hide_show">Hide or show navigation bar</string>
    <string name="nav_bar_state">is navigation bar hidden</string>
    <string name="nav_bar_slide">open or close slide navigation bar</string>
    <string name="nav_bar_slide_state">is slide navigation bar open</string>
    <string name="notification_bar_slide">open or close slide notification bar</string>
    <string name="notification_bar_slide_state">is slide notification bar open</string>
    <string name="screen_shot">screenshot</string>
    <string name="get_width_height">get screen width and height</string>
    <string name="change_screen_bright">change screen bright</string>
    <string name="open_screen_bright">open screen bright</string>
    <string name="close_screen_bright">close screen bright</string>
    <string name="is_screen_bright_on">is screen bright open</string>
    <string name="get_brightness">get screen brightness</string>
    <string name="open_hdmi">open HDMI</string>
    <string name="close_hdmi">close HDMI</string>
    <string name="rotate_90">rotate 90 degree</string>
    <string name="rotate_0">rotate 0 degree</string>

    <string name="install_update">install and update</string>
    <string name="update_img">update img(/Download/update.zip)</string>
    <string name="recovery">recovery</string>
    <string name="silent_install">silent install（root directory places KeyTest.apk）</string>
    <string name="update_img_show_dialog">update firmware show dialog</string>
    <string name="update_img_not_show_dialog">update firmware not show dialog</string>
    <string name="update_img_delete_file">update firmware delete file</string>
    <string name="update_img_not_delete_file">update firmware not delete file</string>


    <string name="net">network</string>
    <string name="get_eth_statuse">get whether the Ethernet is turned on</string>
    <string name="get_eth_mode">get Ethernet mode</string>
    <string name="get_eth_mac">get Ethernet mac</string>
    <string name="set_eth_mac">set Ethernet mac</string>
    <string name="get_eth_ip">get Ethernet IP</string>
    <string name="set_eth_ip">set Ethernet static mode 192.168.1.125</string>
    <string name="set_dhcp_eth">set Ethernet dhcp</string>
    <string name="open_eth">open Ethernet</string>
    <string name="close_eth">close Ethernet</string>
    <string name="get_gateway">get Ethernet gateway</string>
    <string name="get_mask">get Ethernet mask</string>
    <string name="get_dns1">get Ethernet DNS1</string>
    <string name="get_dns2">get Ethernet DNS2</string>
    <string name="set_pppoe_dial">pppoe dial</string>

    <string name="storage">storage</string>
    <string name="externel_sd_path">external SD card path</string>
    <string name="externel_u_path">external USB card path</string>
    <string name="uninstall_externel">unload external storage</string>
    <string name="mount_externel">mount external storage</string>
    <string name="read_eeprom">read eeprom</string>
    <string name="write_eeprom">write eeprom</string>
    <string name="get_uartPath">get the absolute path of the serial port</string>

    <string name="other">others</string>
    <string name="set_time">set time 2017.3.16 17:44:55</string>
    <string name="switch_off_time">turn off auto-set time</string>
    <string name="switch_on_time">turn on auto-set time</string>
    <string name="is_auto_time">is auto-set time open</string>
    <string name="su_order">su order</string>
    <string name="net_type">net type</string>
    <string name="screen_num">screen num</string>
    <string name="hdmi">is hdmi output</string>

    <string name="set_volume">set volume</string>

    <string name="poweronoff">poweronoff</string>
    <string name="gpio">GPIO Test</string>

    <string name="open_soft_keyboard">Open soft keyboard</string>
    <string name="hide_soft_keyboard">Hide soft keyboard</string>
    <string name="set_dormant_interval">set dormant interval 15s</string>
    <string name="awaken">awaken</string>
    <string name="set_default_inputmethod">set default inputmethod(Google pinyin)</string>
    <string name="get_default_inputmethod">get default inputmethod</string>
    <string name="set_language">set language english</string>
    <string name="get_cpu_temp">get cpu temp</string>
    <string name="set_adb_open">open adb</string>
    <string name="set_adb_close">close adb</string>
    <string name="replace_bootanimation">replace bootanimation(root directory places Bootanimation.zip)</string>
    <string name="set_default_launcher">set Default Launcher3</string>

    <string name="mode_one">mode one</string>
    <string name="mode_two">mode two</string>
    <string name="poweroff_time">poweroff time</string>
    <string name="poweron_time">poweron time</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="date">date</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="set_a_group_time">Set a group of poweronoff time (if you only want to set the poweron time, you can enter 0 for the poweroff time)</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wen">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="set_period_poweronoff">set period poweronoff time（hour:minute）</string>
    <string name="is_set_PowerOnOff">is set powerOnOff</string>
    <string name="get_current_power_on_time">get current poweron time</string>
    <string name="get_current_power_off_time">get current poweroff time</string>
    <string name="get_last_power_on_time">get last poweron time</string>
    <string name="get_last_power_off_time">get last poweroff time</string>
    <string name="clear_poweronoff_time">clear poweronoff time</string>
    <string name="get_current_power_mode">get current power mode</string>
    <string name="get_poweronoff_version">get poweronoff version</string>

    <string name="input_gpio_index">please input gpio index</string>
    <string name="is_gpio_valid">check gpio valid</string>
    <string name="is_gpio_out_or_in">get gpio is out or in</string>
    <string name="set_gpio_in">set gpio in</string>
    <string name="set_gpio_out">set gpio out</string>
    <string name="get_gpio_value">get gpio value</string>
    <string name="set_gpio_high">set gpio high</string>
    <string name="set_gpio_low">set gpio low</string>
    <string name="gpio_warn">only out gpio can set value</string>
</resources>
